--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
+    "react-native-web-linear-gradient": "^1.1.2",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
