--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "gem update --system 3.3.22 && gem install bundler && yarn install && yarn build"
-  publish = "build"  # The folder to be published after build
+  command = "gem update --system && gem install bundler && gem install ffi && yarn install && yarn build"
+  publish = "build"  # Folder to be published
 
 [build.environment]
-  RUBY_VERSION = "2.7.2"  # Set the Ruby version you need
-  RUBYGEMS_VERSION = "3.3.22"  # Set the required RubyGems version
-  NODE_VERSION = "18"  # Optional: specify Node.js version
-  YARN_VERSION = "1.x"  # Optional: specify Yarn version
+  RUBY_VERSION = "2.7.2"  # Ruby version
+  RUBYGEMS_VERSION = "3.3.22"  # RubyGems version
+  NODE_VERSION = "18"  # Node.js version
+  YARN_VERSION = "1.x"  # Yarn version
