--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "gem update --system && gem install bundler && gem install ffi && yarn install && yarn build"
-  publish = "build"  # Folder to be published
+  command = "gem update --system 3.3.22 && gem install bundler && gem install ffi && yarn install && yarn build"
+  publish = "build"
 
 [build.environment]
-  RUBY_VERSION = "3.6.2"  # Ruby version
-  RUBYGEMS_VERSION = "3.3.22"  # RubyGems version
-  NODE_VERSION = "20.18.1"  # Node.js version
-  YARN_VERSION = "1.22.22"  # Yarn version
+  RUBY_VERSION = "2.7.2"  # Change to a supported Ruby version (e.g., 2.7.2 or 3.1.0)
+  RUBYGEMS_VERSION = "3.3.22"
+  NODE_VERSION = "18"  # You can specify your required Node version
+  YARN_VERSION = "1.x"
