--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "NewRNproject",
   "version": "0.0.1",
   "private": true,
-  "sideEffects": false,
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ],
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,7 +13,8 @@
     "start": "react-native start",
     "test": "jest",
     "web": "webpack serve --mode=development --config webpack.config.js",
-    "build": "webpack serve --mode=production --config webpack.config.js"
+    "build": "webpack --mode=production --config webpack.config.js",
+    "buildrun": "webpack serve --mode=production --config webpack.config.js"
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.0",
@@ -18,7 +22,6 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/base": "git+https://github.com/Sanjeevkumar-kv29/react-native-elements.git#base",
     "@rneui/themed": "git+https://github.com/Sanjeevkumar-kv29/react-native-elements.git#themed",
-    "cocoapods": "^0.0.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -72,6 +75,6 @@
     "webpack-dev-server": "^4.15.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   }
 }
