--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
+  "include": ["src", "assets"],
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "webpack.config.js"]
 }
