--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/base": "git+https://github.com/Sanjeevkumar-kv29/react-native-elements.git#base",
     "@rneui/themed": "git+https://github.com/Sanjeevkumar-kv29/react-native-elements.git#themed",
+    "firebase": "^11.2.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
